--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN echo deb http://deb.debian.org/debian testing main contrib non-free >> /etc/apt/sources.list && \
         apt-get update && \
         apt-get install -y libgdal-dev tk g++ --no-install-recommends && \
-        pip install pipenv && \
+        apt-get install -y postgresql-client && \
         pip install gunicorn && \
         apt-get clean -y
 
