--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ psycopg2-binary
 psycopg2>=2.7.5,<2.8.0
 pillow>=6.2.2,<6.3.0
 flake8>=3.7.9,<3.8.0
+django-cors-headers
+django-phonenumber-field[phonenumberslite]
