--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,17 +39,17 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
 
-  client:
+  frontend:
     build:
-      context: ./client/
-    command: npm start
+      context: ./frontend/
+    command: npm run serve
     volumes:
-      - ./client/:/usr/app
+      - ./frontend/:/usr/app
       - /usr/app/node_modules
     depends_on:
       - backend
     ports:
-      - "3000:3000"
+      - "8080:8080"
 
 volumes:
   postgis_data: {}
