--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,4 @@ pillow>=6.2.2,<6.3.0
 flake8>=3.7.9,<3.8.0
 django-cors-headers
 django-phonenumber-field[phonenumberslite]
+django-rest-passwordreset>=1.1.0,<1.2.0
