--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,4 @@ flake8>=3.7.9,<3.8.0
 django-cors-headers
 django-phonenumber-field[phonenumberslite]
 django-rest-passwordreset>=1.1.0,<1.2.0
+django-debug-toolbar>=2.2.0,<2.3.0
