--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,5 @@ django-cors-headers
 django-phonenumber-field[phonenumberslite]
 django-rest-passwordreset>=1.1.0,<1.2.0
 django-debug-toolbar>=2.2.0,<2.3.0
+djangorestframework-gis==0.15
+django-filter>=2.2.0,<2.3.0
