--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,16 +26,25 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-  pgadmin:
-    image: dpage/pgadmin4
-    depends_on:
-      - db
+
+  nginx:
+    image: nginx:alpine
     ports:
-      - 5050:80
-    ## you can change pgAdmin default username/password with below environment variables
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+      - "0.0.0.0:80:80"
+    depends_on:
+      - backend
+    volumes:
+      - ./nginx/dev.conf:/etc/nginx/nginx.conf:ro
+
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   depends_on:
+  #     - db
+  #   ports:
+  #     - 5050:80
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
 
   frontend:
     container_name: frontend
@@ -60,5 +69,6 @@ services:
       - C:\ProgramData\Portainer:/data
 
 volumes:
+  staticfiles_root:
   portainer_data:
   postgis_data: {}
