--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,4 @@ django-rest-passwordreset>=1.1.0,<1.2.0
 django-debug-toolbar>=2.2.0,<2.3.0
 djangorestframework-gis==0.15
 django-filter>=2.2.0,<2.3.0
+gunicorn>=20.0.4,<20.1.0
