--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ __pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-media/*
+/backend/media/*
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -129,4 +129,4 @@ yarn-error.log
 
 # End of https://www.gitignore.io/api/vuejs,django
 
-backend/media/
+
