--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,4 @@ djangorestframework-gis==0.15
 django-filter>=2.2.0,<2.3.0
 gunicorn>=20.0.4,<20.1.0
 djangorestframework-simplejwt>=4.4.0,<4.5.0
+factory_boy
