--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,5 @@ redis>=3.5.2,<3.6.0
 django-redis>=4.12.1,<4.13.0
 django-silk
 drf-extensions==0.6.0
+coverage>=5.1,<5.2
+pytest-django>=3.9.0,<4.0.0
