--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,12 +81,11 @@ services:
   portainer:
     image: portainer/portainer
     container_name: portainer
-    command: -H tcp://tasks.agent:9001 --tlsskipverify
     ports:
       - "9000:9000"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - C:\ProgramData\Portainer:/data
+      - /portainer_data:/data
 
 volumes:
   staticfiles_root:
