--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   backend:
+    container_name: backend
     build:
       context: .
       dockerfile: ./backend/Dockerfile
