--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 before_script: pip install docker-compose
 
 script:
-    - docker-compose run backend sh -c "./script/run-tests.sh && flake8"
+    - docker-compose run backend sh -c "coverage run -m pytest ./tests/ && flake8"
