--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = backend.tests
 python_files = tests.py test_*.py *_tests.py
+filterwarnings =
+    error::django.utils.deprecation.RemovedInDjango40Warning
+    ignore::django.utils.deprecation.RemovedInDjango40Warning
