--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,13 +49,26 @@ services:
       context: .
       dockerfile: ./backend/Dockerfile
     container_name: celery
-    command: bash -c 'celery worker --app=backend.celery_app:app --loglevel=info'
+    command: bash -c 'python3 manage.py watch_celery'
     volumes:
       - ./backend:/code
     depends_on:
       - db
       - redis
 
+  flower:
+    image: mher/flower
+    container_name: flower_dev_vet
+    command: flower --url_prefix=flower
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379
+      - FLOWER_PORT=5555
+    ports:
+      - 5555:5555
+    depends_on:
+      - celery
+      - redis
+    
   frontend:
     container_name: frontend
     build:
