--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -17,6 +17,10 @@ http {
     server frontend:8080;
   }
 
+  upstream flower {
+    server flower:5555;
+  }
+
   server {
     listen 80;
     charset utf-8;
@@ -47,5 +51,17 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
     }
+
+    # flower
+    location /flower/ {
+        rewrite ^/flower/(.*)$ /$1 break;
+        proxy_pass http://flower/;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
   }
 }
