--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Backend variables for db connection.
 DB_HOST=db
+BACKEND_SECRET=dev_secretmsh$zm9fz)@n0@w+u@ik#m(kl61mws0sg$j0dzh=8y641ynei2
 
 # Postgres environment variables.
 POSTGRES_DB=app
