Fixed pgadmin configs.
pgadmin admin now working as nginx is correctly configured now.

--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -21,6 +21,10 @@ http {
     server flower:5555;
   }
 
+  upstream pgadmin {
+    server pgadmin:5050;
+  }
+
   server {
     listen 80;
     charset utf-8;
