Users now need to activate their user profile
All new users are inactive until activated.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.linting.enabled": false,
-    "python.linting.flake8Enabled": true
+    "python.linting.flake8Enabled": true,
+    "python.pythonPath": "C:\\Users\\mirja\\.virtualenvs\\critter-env-YjJuNu5O\\Scripts\\python.exe"
 }
