--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 before_script: pip install docker-compose
 
 script:
-    - docker-compose run -e ./env_example backend sh -c "coverage run -m pytest ./tests/ && flake8"
+    - docker-compose run -e BACKEND_SECRET=your_secret -e DB_HOST=db -e POSTGRES_DB=app -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres backend sh -c "coverage run -m pytest ./tests/ && flake8"
