--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,7 @@ services:
 
 env:
     # Backend variables for db connection.
-    - DB_HOST=db
-    - BACKEND_SECRET=dev_secret
-
-    # Postgres environment variables.
-    - POSTGRES_DB=app
-    - POSTGRES_USER=postgres
-    - POSTGRES_PASSWORD=postgres
-
-    # pgadmin environment variables.
-    - PGADMIN_DEFAULT_EMAIL=test
-    - PGADMIN_DEFAULT_PASSWORD=password
+    - DB_HOST=db BACKEND_SECRET=dev_secret POSTGRES_DB=app POSTGRES_USER=postgres POSTGRES_PASSWORD=postgres PGADMIN_DEFAULT_EMAIL=test PGADMIN_DEFAULT_PASSWORD=password
 
 before_script: pip install docker-compose
 
