--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 
 # Created by https://www.gitignore.io/api/vuejs,django
 # Edit at https://www.gitignore.io/?templates=vuejs,django
-
+# General
+.env
 ### Django ###
 *.log
 *.pot
