--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,7 +10,8 @@ ENV PATH /app/node_modules/.bin:$PATH
 # install and cache app dependencies
 COPY package.json /app/package.json
 RUN npm install
-RUN npm install @vue/cli@3.7.0 -g
+RUN npm run build
+ENV HOST 0.0.0.0
 
 # start app
-CMD ["npm", "run", "serve"]
+CMD ["npm", "run", "dev"]
