--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.gitignore.io/api/vuejs,django
 # Edit at https://www.gitignore.io/?templates=vuejs,django
 # General
+*.vscode
 .env
 ### Django ###
 *.log
