--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,21 @@
     "start": "nuxt start",
     "export": "nuxt export",
     "serve": "nuxt serve",
-    "test": "jest"
+    "test": "jest",
+    "watch:sass": "node-sass assets/sass/main.scss assets/css/style.css -w",
+    "sass:nuxt": "npm-run-all --parallel dev watch:sass"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
     "cookie-universal-nuxt": "^2.1.4",
     "js-cookie": "^2.2.1",
+    "leaflet": "^1.6.0",
     "mapbox-gl": "^1.11.1",
     "nuxt": "^2.13.0",
+    "nuxt-leaflet": "0.0.21",
     "vue-mapbox": "^0.4.1",
+    "vue2-leaflet": "^2.5.2",
+    "vue2-leaflet-draw-toolbar": "^0.1.1",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
@@ -26,7 +32,10 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.0.1",
+    "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
+    "sass-loader": "^9.0.2",
     "vue-jest": "^3.0.4"
   }
 }
