--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,41 +1,45 @@
 {
   "name": "frontend",
-  "version": "1.0.0",
-  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "export": "nuxt export",
-    "serve": "nuxt serve",
-    "test": "jest",
-    "watch:sass": "node-sass assets/sass/main.scss assets/css/style.css -w",
-    "sass:nuxt": "npm-run-all --parallel dev watch:sass"
+    "ng": "ng",
+    "start": "ng serve --host 0.0.0.0",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "@nuxtjs/axios": "^5.11.0",
-    "cookie-universal-nuxt": "^2.1.4",
-    "js-cookie": "^2.2.1",
-    "leaflet": "^1.6.0",
-    "mapbox-gl": "^1.11.1",
-    "nuxt": "^2.13.0",
-    "nuxt-leaflet": "0.0.21",
-    "vue-mapbox": "^0.4.1",
-    "vue2-leaflet": "^2.5.2",
-    "vue2-leaflet-draw-toolbar": "^0.1.1",
-    "vuex-persistedstate": "^3.0.1"
+    "@angular/animations": "~11.1.1",
+    "@angular/common": "~11.1.1",
+    "@angular/compiler": "~11.1.1",
+    "@angular/core": "~11.1.1",
+    "@angular/forms": "~11.1.1",
+    "@angular/platform-browser": "~11.1.1",
+    "@angular/platform-browser-dynamic": "~11.1.1",
+    "@angular/router": "~11.1.1",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.3",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^26.0.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.0.1",
-    "node-sass": "^4.14.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "sass-loader": "^9.0.2",
-    "vue-jest": "^3.0.4"
+    "@angular-devkit/build-angular": "~0.1101.2",
+    "@angular/cli": "~11.1.2",
+    "@angular/compiler-cli": "~11.1.1",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.2.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.1.2"
   }
 }
