docker and env updated to work

--- a/.env_example
+++ b/.env_example
@@ -9,5 +9,5 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
 # pgadmin environment variables.
-PGADMIN_DEFAULT_EMAIL=test
+PGADMIN_DEFAULT_EMAIL=test@test.com
 PGADMIN_DEFAULT_PASSWORD=password
