--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
 
   db:
     image: kartoza/postgis:12.0
+    ports:
+    - 5432:5432
     environment:
       - TZ=Asia/Tehran
       - POSTGRES_DB=${POSTGRES_DB}
