--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,10 +9,10 @@ gunicorn>=20.0.4,<20.1.0
 # Caching and Async (Celery) packages
 django-redis>=4.12.1,<4.13.0
 redis>=3.5.2,<3.6.0
-celery==4.2
+celery==5.0.5
 # Extensions and addons
 django-filter>=2.2.0,<2.3.0
-djangorestframework-simplejwt>=4.4.0,<4.5.0
+djangorestframework-simplejwt==4.6.0
 django-rest-passwordreset>=1.1.0,<1.2.0
 django-phonenumber-field[phonenumberslite]
 drf-extensions==0.6.0
