--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ gunicorn>=20.0.4,<20.1.0
 django-redis>=4.12.1,<4.13.0
 redis>=3.5.2,<3.6.0
 celery==5.0.5
+graphene-django==2.15.0
 # Extensions and addons
 django-filter>=2.2.0,<2.3.0
 djangorestframework-simplejwt==4.6.0
